--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Arul's Portfolio</title>
     </head>
     <body>
+        <a href="./public/about.html">About Me</a>
+        <a href="./public/contact.html">Contact Me</a>
         <h1>Arul Bangari's Portfolio</h1>
         <h2>Just a guy trying to make stuff he finds fun</h2>
         <hr />
@@ -20,12 +22,9 @@
             <img src="./assets/images/birthday-invite.png" alt="An image of Birthday Invite Site" height="200"/>
         </a>
         <h3>Recent Movies</h3>
-        <p>Listed recent movies I have watched</p>
+        <p>List of recent movies I have watched</p>
         <a href="./public/recent-movies.html">
             <img src="./assets/images/recent-movies.png" alt="An image of recent movies watched site" height="200" />
         </a>
-        <hr />
-        <a href="./public/about.html">About Me</a>
-        <a href="./public/contact.html">Contact Me</a>
     </body>
 </html>
