Added Hobbies and Resume page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <a href="./public/about.html">About Me</a>
+        <a href="./public/resume.html">Resume</a>
+        <a href="./public/hobbies.html">Hobbies</a>
         <a href="./public/contact.html">Contact Me</a>
         <h1>Arul Bangari's Portfolio</h1>
         <h2>Just a guy trying to make stuff he finds fun</h2>
