--- a/index.html
+++ b/index.html
@@ -1,32 +1,56 @@
 
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="eng" class = "index">
     <head>
         <meta charset="UTF-8">
         <title>Arul's Portfolio</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-        <a href="./public/about.html">About Me</a>
-        <a href="./public/resume.html">Resume</a>
-        <a href="./public/hobbies.html">Hobbies</a>
-        <a href="./public/contact.html">Contact Me</a>
+        <div class="nav">
+            <div class="nav flex">
+                <div class="button">
+                    <a href="./index.html">Home</a>
+                </div>
+                <div class="button">
+                    <a href="./public/about.html">About Me</a>
+                </div>
+                <div class="button">
+                    <a href="./public/resume.html">Resume</a>
+                </div>
+                <div class="button">
+                    <a href="./public/hobbies.html">Hobbies</a>
+                </div>
+                <div class="button">
+                    <a href="./public/contact.html">Contact Me</a>
+                </div>
+            </div>
+        </div>
         <h1>Arul Bangari's Portfolio</h1>
         <h2>Just a guy trying to make stuff he finds fun</h2>
         <hr />
-        <h3>File Paths</h3>
-        <p>Explored inserting images from diverse sources, specifically focusing on the use of relative file paths.</p>
-        <a href="./public/File Paths/Folder0/index.html">
-            <img src="./assets/images/file-path.png" alt="A sample of the File Path Webpage" height="200"/>
-        </a>
-        <h3>Birthday Invite</h3>
-        <p>Created a birthday invite link</p>
-        <a href="./public/Birthday Invite Project/index.html">
-            <img src="./assets/images/birthday-invite.png" alt="An image of Birthday Invite Site" height="200"/>
-        </a>
-        <h3>Recent Movies</h3>
-        <p>List of recent movies I have watched</p>
-        <a href="./public/recent-movies.html">
-            <img src="./assets/images/recent-movies.png" alt="An image of recent movies watched site" height="200" />
-        </a>
+        <div class="portfolio flex">
+            <div class="portfolio-item">
+                <h3>File Paths</h3>
+                <p>Explored inserting images from diverse sources, specifically focusing on the use of relative file paths.</p>
+                <a href="./public/File Paths/Folder0/index.html">
+                    <img src="./assets/images/file-path.png" alt="A sample of the File Path Webpage" height="200" class="preview"/>
+                </a>
+            </div>
+            <div class="portfolio-item">
+                <h3>Birthday Invite</h3>
+                <p>Created a birthday invite link</p>
+                <a href="./public/Birthday Invite Project/index.html">
+                    <img src="./assets/images/birthday-invite.png" alt="An image of Birthday Invite Site" height="200" class="preview"/>
+                </a>
+            </div>
+            <div class="portfolio-item">
+                <h3>Recent Movies</h3>
+                <p>List of recent movies I have watched</p>
+                <a href="./public/recent-movies.html">
+                    <img src="./assets/images/recent-movies.png" alt="An image of recent movies watched site" height="200" class="preview"/>
+                </a>
+            </div>
+        </div>
     </body>
 </html>
