--- a/public/contact.html
+++ b/public/contact.html
@@ -1,3 +1,36 @@
-<h1>Contact Me</h1>
-<p>Tel: +6502003774</p>
-<p>Email: write2arulbangari@gmail.com</p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Contact Me</title>
+        <link rel="stylesheet" href="../assets/css/style.css">
+    </head>
+
+    <body>
+        <div class="nav">
+            <div class="nav flex">
+                <div class="button">
+                    <a href="./index.html">Home</a>
+                </div>
+                <div class="button">
+                    <a href="./about.html">About Me</a>
+                </div>
+                <div class="button">
+                    <a href="./resume.html">Resume</a>
+                </div>
+                <div class="button">
+                    <a href="./hobbies.html">Hobbies</a>
+                </div>
+                <div class="button">
+                    <a href="./contact.html">Contact Me</a>
+                </div>
+            </div>
+        </div>
+
+        <h1>Contact Me</h1>
+        <p>Tel: +6502003774</p>
+        <p>Email: write2arulbangari@gmail.com</p>
+        <p>GitHub: <a href="https://github.com/arulbangari">https://github.com/arulbangari</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/arul-bangari/">https://www.linkedin.com/in/arul-bangari/</a></p>
+    </body>
+</html>
