--- a/public/resume.html
+++ b/public/resume.html
@@ -3,9 +3,30 @@
     <head>
         <meta data="UTF-8">
         <title>Arul's Resume</title>
+        <link rel="stylesheet" href="../assets/css/style.css">
     </head>
 
     <body>
+        <div class="nav">
+            <div class="nav flex">
+                <div class="button">
+                    <a href="../index.html">Home</a>
+                </div>
+                <div class="button">
+                    <a href="./about.html">About Me</a>
+                </div>
+                <div class="button">
+                    <a href="./resume.html">Resume</a>
+                </div>
+                <div class="button">
+                    <a href="./hobbies.html">Hobbies</a>
+                </div>
+                <div class="button">
+                    <a href="./contact.html">Contact Me</a>
+                </div>
+            </div>
+        </div>
+
         <h1>Arul Bangari's Resume</h1>
         <hr />
         <h2>Summary</h2>
