--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,50 @@
-<h1>About Me</h1>
-<img src="../assets/images/Arul.jpg" height="100" />
-<p>
-Hey there! I'm Arul, a recent UCSC grad with a unique blend of skills
-thanks to my double major in Computer Science and Business Management Economics.
-</p>
+<!DOCTYPE html>
+<html lang="eng" class="about">
+    <head>
+        <meta charset="UTF-8">
+        <title>About Me</title>
+        <link rel="stylesheet" href="../assets/css/style.css">
+    </head>
+    <body>
+        <div class="nav">
+            <div class="nav flex">
+                <div class="button">
+                    <a href="../index.html">Home</a>
+                </div>
+                <div class="button">
+                    <a href="./about.html">About Me</a>
+                </div>
+                <div class="button">
+                    <a href="./resume.html">Resume</a>
+                </div>
+                <div class="button">
+                    <a href="./hobbies.html">Hobbies</a>
+                </div>
+                <div class="button">
+                    <a href="./contact.html">Contact Me</a>
+                </div>
+            </div>
+        </div>
 
-<p>
-My journey started at Carlmont High School, where I was always on the
-move, whether it was in the pool for swimming, on the court for basketball,
-or hitting the trails for cross country. That active spirit carried into college,
-and by my junior year, I really dove into going to the gym, making it a daily part of my
-routine. Even now, in my free time, I love to go to the gym and get in some swimming.
-</p>
+        <h1>About Me</h1>
+        <img src="../assets/images/Arul.jpg" height="100" class="arul"/>
+        <p>
+        Hey there! I'm Arul, a recent UCSC grad with a unique blend of skills
+        thanks to my double major in Computer Science and Business Management Economics.
+        </p>
 
-<p>
-Now that I've wrapped up my studies at UCSC, I'm excited to jump into the professional
-world and find a job where I can make an impact. When I'm not on the job hunt, you'll
-find me building applications that spark my curiosity and are just plain fun to create.
-</p>
+        <p>
+        My journey started at Carlmont High School, where I was always on the
+        move, whether it was in the pool for swimming, on the court for basketball,
+        or hitting the trails for cross country. That active spirit carried into college,
+        and by my junior year, I really dove into going to the gym, making it a daily part of my
+        routine. Even now, in my free time, I love to go to the gym and get in some swimming.
+        </p>
+
+        <p>
+        Now that I've wrapped up my studies at UCSC, I'm excited to jump into the professional
+        world and find a job where I can make an impact. When I'm not on the job hunt, you'll
+        find me building applications that spark my curiosity and are just plain fun to create.
+        </p>
+    </body>
+</html>
