--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="hobbies">
     <head>
         <meta data="UTF-8">
         <title>Arul's Hobbies</title>
+        <link rel="stylesheet" href="../assets/css/style.css">
     </head>
 
     <body>
+        <div class="nav">
+            <div class="nav flex">
+                <div class="button">
+                    <a href="./index.html">Home</a>
+                </div>
+                <div class="button">
+                    <a href="./about.html">About Me</a>
+                </div>
+                <div class="button">
+                    <a href="./resume.html">Resume</a>
+                </div>
+                <div class="button">
+                    <a href="./hobbies.html">Hobbies</a>
+                </div>
+                <div class="button">
+                    <a href="./contact.html">Contact Me</a>
+                </div>
+            </div>
+        </div>
+
         <h1>Arul's Hobbies</h1>
         <p>
             My personal development and daily life are significantly shaped by a consistent
