--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -10,7 +10,7 @@
         <div class="nav">
             <div class="nav flex">
                 <div class="button">
-                    <a href="./index.html">Home</a>
+                    <a href="../index.html">Home</a>
                 </div>
                 <div class="button">
                     <a href="./about.html">About Me</a>
