added hovering, changed font, changed anchoring to include button

--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="eng" class = "index">
     <head>
         <meta charset="UTF-8">
         <title>Arul's Portfolio</title>
         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="nav">
             <div class="nav flex">
-                <div class="button">
-                    <a href="./index.html">Home</a>
-                </div>
-                <div class="button">
-                    <a href="./public/about.html">About Me</a>
-                </div>
-                <div class="button">
-                    <a href="./public/resume.html">Resume</a>
-                </div>
-                <div class="button">
-                    <a href="./public/hobbies.html">Hobbies</a>
-                </div>
-                <div class="button">
-                    <a href="./public/contact.html">Contact Me</a>
-                </div>
+                <a href="./index.html">
+                    <div class="button">Home</div>
+                </a>
+                <a href="./public/about.html">
+                    <div class="button">About Me</div>
+                </a>
+                <a href="./public/resume.html">
+                    <div class="button">Resume</div>
+                </a>
+                <a href="./public/hobbies.html">
+                    <div class="button">Hobbies</div>
+                </a>
+                <a href="./public/contact.html">
+                    <div class="button">Contact Me</div>
+                </a>
             </div>
         </div>
         <h1>Arul Bangari's Portfolio</h1>
