--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -4,26 +4,29 @@
         <meta data="UTF-8">
         <title>Arul's Hobbies</title>
         <link rel="stylesheet" href="../assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <div class="nav">
             <div class="nav flex">
-                <div class="button">
-                    <a href="../index.html">Home</a>
-                </div>
-                <div class="button">
-                    <a href="./about.html">About Me</a>
-                </div>
-                <div class="button">
-                    <a href="./resume.html">Resume</a>
-                </div>
-                <div class="button">
-                    <a href="./hobbies.html">Hobbies</a>
-                </div>
-                <div class="button">
-                    <a href="./contact.html">Contact Me</a>
-                </div>
+                <a href="../index.html">
+                    <div class="button">Home</div>
+                </a>
+                <a href="./about.html">
+                    <div class="button">About Me</div>
+                </a>
+                <a href="./resume.html">
+                    <div class="button">Resume</div>
+                </a>
+                <a href="./hobbies.html">
+                    <div class="button">Hobbies</div>
+                </a>
+                <a href="./contact.html">
+                    <div class="button">Contact Me</div>
+                </a>
             </div>
         </div>
 
